Fixed JS issue when there's no fields checked for a post type. Fixed styling for current modern mp6 admin interface. Fixed strict warnings, shouldn't throw any warnings now. Fixed Removed some debug code left behind after last update.

--- a/assets/required-fields.css
+++ b/assets/required-fields.css
@@ -17,24 +17,17 @@
 .required-field-error { outline: #ffebe8 4px solid; }
 .required-field-warning { outline: #ffffe0 4px solid; }
 .error.required-fields-warnings { background-color: #ffffe0; border-color: #e6db55; }
-.version-3-8 .error.required-fields-warnings,
-.version-3-9 .error.required-fields-warnings,
-.version-3-10 .error.required-fields-warnings { background: #fff; border-left: 4px solid #ffba00; }
-.version-3-8  .required-field-error,
-.version-3-9  .required-field-error,
-.version-3-10 .required-field-error { outline: none; border-left: 4px solid #dd3d36; }
-.version-3-8  .required-field-warning,
-.version-3-9  .required-field-warning,
-.version-3-10 .required-field-warning { outline: none; border-left: 4px solid #ffba00; }
+
+.rqf-modern .error.required-fields-warnings { background: #fff; border-left: 4px solid #ffba00; }
+.rqf-modern .required-field-error { outline: none; border-left: 4px solid #dd3d36; }
+.rqf-modern .required-field-warning { outline: none; border-left: 4px solid #ffba00; }
+
 .required-fields-errors [data-highlight] { cursor: pointer; }
 .required-fields-errors [data-highlight]:hover,
 .required-fields-errors [data-highlight]:focus { color: #c00; }
-.version-3-8  .required-fields-errors [data-highlight]:hover,
-.version-3-8  .required-fields-errors [data-highlight]:focus,
-.version-3-9  .required-fields-errors [data-highlight]:hover,
-.version-3-9  .required-fields-errors [data-highlight]:focus,
-.version-3-10 .required-fields-errors [data-highlight]:hover,
-.version-3-10 .required-fields-errors [data-highlight]:focus { color: #2ea2cc; }
+
+.rqf-modern .required-fields-errors [data-highlight]:hover,
+.rqf-modern .required-fields-errors [data-highlight]:focus { color: #2ea2cc; }
 .shake {
 	-webkit-animation-duration: .4s;
 	-webkit-animation-iteration-count: 1;
